Simplify objecttree (so legacy) rendering